[package]
name = "iperf3-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "iperf3"
path = "src/lib.rs"

[dependencies]
once_cell = "1.17"
async-std = "1.12"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
